# 2019_Numerical_Analysis

./: .gitmodules  README.md
Homework/: LU.m  Untitled 1.odt  cholesky.m  homework1 - 副本.odt  homework2.3.m  homework2_3.m  homework2_4.m  homework2_5.m  homework3_1.m  homework3_1TA.m  homework3_2.m  homework3_22.m  homework3_3.m  homework3_4.m  newton.m  roo.m  荣春燕2019233174-homework1.doc  荣春燕2019233174-homework2.docx  荣春燕2019233174-homework3.docx  荣春燕2019233174-homework4.docx  荣春燕2019233174-homework5.docx  荣春燕2019233174.doc
Homework/NA_homework/h1/solution/: 1.jl  a.xlsx  aaa.m  matlab1.mat  zz.m  朱佳会_hw1_2018233141.docx
Homework/NA_homework/h2/solution/: 朱佳会_hw2_2018233141.docx
Homework/Project/: jaco_control.py  robot_functions.py
Project/catkin_ws/: Output-12_01_16_38_32  Output-12_02_16_03_07  Output-12_02_16_10_07  Output-12_02_16_29_17  data  plotfig.py
Project/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
Project/catkin_ws/notebook_ws/: default.ipynb
Project/机械臂算法/: Self Modelling Algorithm detail.docx  科研实践报告summer research report_Zhu Wangshu.docx
Project/机械臂算法/DRL_kinova-master/: README.md
Project/机械臂算法/DRL_kinova-master/kinova_ws/src/jaco_trajectory/: CMakeLists.txt
Project/机械臂算法/DRL_kinova-master/kinova_ws/src/jaco_trajectory/script/: jaco_control.py  robot_functions.py
Project/机械臂算法/DRL_kinova-master/kinova_ws/src/jaco_trajectory/src/: calc_broken_joint_angle.cpp
Project/机械臂算法/机械臂算法专利/: Self Modelling Algorithm detail.docx  中国专利申请需求表.docx  技术交底书-Andre Rosendo课题组（补充材料）[10656].docx  技术交底书.docx  材料备份.docx
(+239 files in other folders)
